--- a/views/location.html
+++ b/views/location.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Boxin | Sell or Buy items</title>
-    <link rel="stylesheet" href="../style/common.css" />
-    <link rel="stylesheet" href="../style/location.css" />
+    <link rel="stylesheet" href="/common.css" />
+    <link rel="stylesheet" href="/index.css" />
+    <link rel="stylesheet" href="/location.css" />
   </head>
   <body>
     <div class="wrapper">
