--- a/views/index.html
+++ b/views/index.html
@@ -3,10 +3,15 @@
 <main>
   <img src="/transaction.jpg" class="inline-photo show-on-scroll" />
 </main>
-<div id="image1" class="box" data-aos="zoom-in">a</div>
-<div id="content1" class="box" data-aos="zoom-in-up">a</div>
-<div id="content2" class="box" data-aos="flip-up">b</div>
-<div id="image2" class="box" data-aos="flip-down">b</div>
+<div id="content0"><h2>Features</h2></div>
+<img src="/window-locker.jpg" id="image1" class="box" />
+<div id="content1" class="box" data-aos="zoom-in-up">
+  <p>You can see the products and buy in that place!</p>
+</div>
+<div id="content2" class="box" data-aos="flip-up">
+  <p>It is more than safe since it is the indirect transaction system!</p>
+</div>
+<img src="/safe.jpg" id="image2" class="box" />
 <div id="image3" class="box" data-aos="slide-left">c</div>
 <div id="content3" class="box" data-aos="slide-left">c</div>
 <!-- Footer -->
