--- a/views/join.html
+++ b/views/join.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %} {% block content %}
 <div class="timeline">
-  <form action="/auth/join" id="foin-form" method="post">
+  <form action="/auth/join" id="join-form" method="post">
     <div class="input-group">
       <label for="join-email">Email</label>
       <input type="email" id="join-email" name="email" />
