--- a/public/common.css
+++ b/public/common.css
@@ -33,7 +33,7 @@
 
 .wrapper .top_nav {
   width: 100%;
-  height: 65px;
+  height: 8rem;
   background: #fff;
   padding: 0 50px;
   display: flex;
@@ -97,13 +97,13 @@
 }
 
 .wrapper .top_nav .right ul li a:hover {
-  color: #ffab35;
+  font-weight: bold;
 }
 
 .wrapper .bottom_nav {
   width: 100%;
   background: #ebf4fa;
-  height: 45px;
+  height: 3rem;
   padding: 0 50px;
 }
 
