--- a/views/layout.html
+++ b/views/layout.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="/index.css" />
     <link rel="stylesheet" href="/join.css" />
     <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
-    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" /> -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script src="../script/index.js"></script>
-    <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   </head>
   <body>
     <div class="wrapper">
@@ -36,16 +36,15 @@
               {% if user and user.id %}
               <ul>
                 <li>
-                  <a href="javascript:void(0)"
-                    >{{'Welcome! ' + user.nickName}}</a
-                  >
-                  <a href="/auth/logout">Log Out</a>
+                  <p id="welcome">{{'Welcome! ' + user.nickName}}</p>
+                  <a href="/auth/logout">Log out</a>
                 </li>
                 <li><a href=""></a></li>
               </ul>
               {% else %}
               <ul>
                 <li><a href="/login">Login</a></li>
+                <li><a href="/auth/google">Google</a></li>
                 <li><a href="/join">Join</a></li>
               </ul>
               {% endif %}
@@ -71,7 +70,12 @@
         }
       };
     </script>
-    <script src="bower_components/aos/dist/aos.js"></script>
+    <!-- <script src="bower_components/aos/dist/aos.js"></script> -->
+    <script>
+      window.addEventListener("load", function (event) {
+        AOS.init();
+      });
+    </script>
     {% block script %} {% endblock %}
   </body>
 </html>
