--- a/views/index.html
+++ b/views/index.html
@@ -9,11 +9,13 @@
   <p>You can see the products and buy in that place!</p>
 </div>
 <div id="content2" class="box" data-aos="flip-up">
-  <p>It is more than safe since it is the indirect transaction system!</p>
+  <p>It is more than safe since it is an indirect transaction system!</p>
 </div>
 <img src="/safe.jpg" id="image2" class="box" />
-<div id="image3" class="box" data-aos="slide-left">c</div>
-<div id="content3" class="box" data-aos="slide-left">c</div>
+<img src="/fast.jpg" id="image3" class="box" />
+<div id="content3" class="box" data-aos="slide-left">
+  <p>Fast transaction ever! Pay and get the item directly!</p>
+</div>
 <!-- Footer -->
 <footer>
   <p>&copy; 2021 Boxin Corporation. All rights reserved.</p>
