--- a/views/faq.html
+++ b/views/faq.html
@@ -1,16 +1,16 @@
 {% extends 'layout.html' %} {% block content %}
 
 <!-- FAQ content -->
-FAQ
+<div class="frequent">
+  <div>frequently asked questions</div>
+  <button id="chat-btn" type="submit">
+    <a href="/chat">Live Chat</a>
+  </button>
+</div>
 <!-- Footer -->
 <footer>
   <p>&copy; 2021 Boxin Corporation. All rights reserved.</p>
   <br />
   <p>Location: 7777 Nowhere, BC, A0A Z9Z</p>
 </footer>
-{% endblock %}
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script>
-  AOS.init();
-</script>
-{% block script %} {% endblock %}
+{% endblock %} {% block script %} {% endblock %}
