--- a/views/layout.html
+++ b/views/layout.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="/common.css" />
     <link rel="stylesheet" href="/index.css" />
     <link rel="stylesheet" href="/join.css" />
-    <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
+    <link rel="stylesheet" href="/faq.css" />
+    <link rel="stylesheet" href="/chat.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <script src="../script/index.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   </head>
   <body>
