--- a/views/index.html
+++ b/views/index.html
@@ -13,14 +13,14 @@
 </div>
 <img src="/safe.jpg" id="image2" class="box" />
 <img src="/fast.jpg" id="image3" class="box" />
-<div id="content3" class="box" data-aos="slide-left">
+<div id="content3" class="box" data-aos="slide-right">
   <p>Fast transaction ever! Pay and get the item directly!</p>
 </div>
 <!-- Footer -->
 <footer>
   <p>&copy; 2021 Boxin Corporation. All rights reserved.</p>
   <br />
-  <p>Location: 7777 Nowhere, BC, A0A Z9Z</p>
+  <p>Location: 7777 Nowhere, BC, A0A 9Z9</p>
 </footer>
 {% endblock %}
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
