--- a/public/common.css
+++ b/public/common.css
@@ -9,6 +9,10 @@
   font-family: "Roboto Slab", sans-serif;
 }
 
+#welcome {
+  color: crimson;
+}
+
 /* padding: 50px */
 .wrapper {
   margin: 0;
@@ -128,8 +132,17 @@
 }
 
 footer {
-  background-color: #473e3f;
+  background: url("/footer.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
   color: #fff;
   text-align: center;
   padding: 15px;
+}
+
+/* Media query */
+@media only screen and (max-width: 700px) {
+  .wrapper {
+    display: flex;
+  }
 }
