--- a/public/index.css
+++ b/public/index.css
@@ -1,10 +1,14 @@
+body {
+  background-color: #473e3f;
+}
+
 .content {
   display: grid;
   height: 100%;
   width: 100%;
   grid-template-columns: 1fr 1fr;
   /* rows: nav, main, content0, contents, footer */
-  grid-template-rows: 0.2fr 0.6fr 0.5fr 0.6fr 0.6fr 0.6fr 0.1fr;
+  grid-template-rows: 0.1fr 0.6fr 0.3fr 0.3fr 0.3fr 0.3fr 0.1fr;
   grid-template-areas:
     "nav nav"
     "main main"
@@ -17,14 +21,12 @@
   font-family: "Roboto Slab", sans-serif;
 }
 
-#welcome {
-  color: crimson;
-}
-
 main img {
   width: 100%;
-  height: 80vh;
+  height: 100vh;
   margin-bottom: 0;
+  margin-top: 0;
+  opacity: 0.95;
 }
 
 #nav {
@@ -56,7 +58,6 @@ main {
 #image1 {
   height: 100%;
   grid-area: image1;
-  opacity: 0.7;
   padding: 0;
 }
 
@@ -100,8 +101,8 @@ main {
 
 #image3 {
   grid-area: image3;
-  width: 100%;
   height: 100%;
+  padding: 0;
 }
 
 #content3 {
@@ -138,6 +139,9 @@ footer {
 
 /* Media query */
 @media only screen and (max-width: 700px) {
+  main img {
+    height: 50vh;
+  }
   .content {
     grid-template-columns: 1fr;
     grid-template-rows: 0.2fr 0.6fr 0.5fr 0.6fr 0.6fr 0.6fr 0.6fr 0.6fr 0.6fr 0.1fr;
