--- a/views/available.html
+++ b/views/available.html
@@ -6,7 +6,7 @@
 <footer>
   <p>&copy; 2021 Boxin Corporation. All rights reserved.</p>
   <br />
-  <p>Location: 7777 Nowhere, BC, A0A Z9Z</p>
+  <p>Location: 7777 Nowhere, BC, A0A 9Z9</p>
 </footer>
 {% endblock %}
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
