--- a/views/faq.html
+++ b/views/faq.html
@@ -3,6 +3,7 @@
 <!-- FAQ content -->
 <div class="frequent">
   <div>frequently asked questions</div>
+  <p>abc</p>
   <button id="chat-btn" type="submit">
     <a href="/chat">Live Chat</a>
   </button>
@@ -11,6 +12,6 @@
 <footer>
   <p>&copy; 2021 Boxin Corporation. All rights reserved.</p>
   <br />
-  <p>Location: 7777 Nowhere, BC, A0A Z9Z</p>
+  <p>Location: 7777 Nowhere, BC, A0A 9Z9</p>
 </footer>
 {% endblock %} {% block script %} {% endblock %}
