--- a/views/livechat.html
+++ b/views/livechat.html
@@ -8,7 +8,7 @@
 <footer>
   <p>&copy; 2021 Boxin Corporation. All rights reserved.</p>
   <br />
-  <p>Location: 7777 Nowhere, BC, A0A Z9Z</p>
+  <p>Location: 7777 Nowhere, BC, A0A 9Z9</p>
 </footer>
 {% endblock %} {% block script %}
 <script src="/socket.io/socket.io.js">
