--- a/views/login.html
+++ b/views/login.html
@@ -1,24 +1,26 @@
 {% extends 'layout.html' %}{% block content %}
-<div class="timeline">
-  <form action="/auth/login" id="join-form" method="post">
-    <div class="input-group">
-      <label for="login-email">Email</label>
-      <input type="email" id="login-email" name="email" />
-    </div>
-    <div class="input-group">
-      <label for="login-password">Password</label>
-      <input type="password" id="login-password" name="password" />
-    </div>
-    <div>
-      <button id="login-btn" type="submit" class="btn">Login</button>
-    </div>
-  </form>
+<div class="container">
+  <div class="timeline">
+    <form action="/auth/login" id="join-form" method="post">
+      <div class="input-group">
+        <label for="login-email">Email</label>
+        <input type="email" id="login-email" name="email" />
+      </div>
+      <div class="input-group">
+        <label for="login-password">Password</label>
+        <input type="password" id="login-password" name="password" />
+      </div>
+      <div id="login-btn">
+        <button type="submit" class="btn">Login</button>
+      </div>
+    </form>
+  </div>
 </div>
 <!-- Footer -->
 <footer>
   <p>&copy; 2021 Boxin Corporation. All rights reserved.</p>
   <br />
-  <p>Location: 7777 Nowhere, BC, A0A Z9Z</p>
+  <p>Location: 7777 Nowhere, BC, A0A 9Z9</p>
 </footer>
 
 {% endblock %} {% block script %}
